cabal-version:      3.4
name:               aoc
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Kai-Oliver Prott
maintainer:         kai.prott@hotmail.de
build-type:         Simple
category:           Game
synopsis:           Advent of Code 2022
description:        My solutions for the Advent of Code 2022

source-repository head
    type:     git
    location: git@github.com:Ziharrk/aoc2022.git

common warnings
    ghc-options: -Wall

executable aoc
    import:           warnings
    main-is:          Main.hs
    other-modules:    Tuple,
                      Day1,
                      Day2,
                      Day3,
                      Day4,
                      Day5,
                      Day6,
                      Day7,
                      Day8,
                      Day9,
                      Day10,
                      Day11,
                      Day12,
                      Day13,
                      Day14,
                      Day15,
                      Day16,
                      Day17,
                      Day18,
                      Day19,
                      Day20,
                      Day21,
                      Day22,
                      Day23,
    build-depends:    base             >= 4.15 && < 4.18,
                      parsec           >= 3.1  && < 4.0,
                      text             >= 1.2  && < 2.1,
                      template-haskell >= 2.15 && < 3.0,
                      mtl              >= 2.1  && < 2.4,
                      containers       >= 0.5  && < 1.0,
                      unordered-containers >= 0.2  && < 1.0,
                      hashable         >= 1.4  && < 2.0,
                      extra            >= 1.5  && < 2.0,
                      vector           >= 0.12 && < 0.14,
                      directory        >= 1.3  && < 2.0,
                      parallel         >= 3.2  && < 4.0,
    hs-source-dirs:   src
    default-language: GHC2021
    other-extensions: MultiWayIf
